--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
   <head>
 
+	<meta name="google-site-verification" content="s9qXzlbfgDFmHRh-_ud5GamuQHZDoiNFkkcWod1S2gs" />
+	  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    	  
