--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
   <head>
-
+	  
+<link rel="icon" 
+      type="image/png" 
+      href="https://kiosbutugirah.github.io/icon.png">
+	  
 	<meta name="google-site-verification" content="s9qXzlbfgDFmHRh-_ud5GamuQHZDoiNFkkcWod1S2gs" />
 	  
     <meta charset="utf-8">
